# megan_global_explanations

./: .gitignore  DEVELOP.rst  HISTORY.rst  LICENSE  README.rst  poetry.toml  pyproject.toml
megan_global_explanations/: cli.py  data.py  dbadv.py  deep_ect.py  gpt.py  main.py  models.py  pack.py  testing.py  typing.py  utils.py  visualization.py
megan_global_explanations/examples/: 00_concept_report.py  01_saving_loading.py
megan_global_explanations/experiments/: automatic_clustering.py  automatic_clustering__megan.py  automatic_clustering__megan__aqsoldb.py  automatic_clustering__megan__rb_motifs.py  concept_extraction.py  concept_extraction__aqsoldb.py  concept_extraction__aqsoldb.yml  create_graph_dataset.py  create_vector_dataset.py  evaluate_model.py  explain_element.py  explain_element__aqsoldb.py  generate_ba2motifs_dataset.py  global_explanation_morphing.py  gpt_exploration.py  graph_contrastive_learning.py  graph_dataset.py  graph_dataset__prediction.py  graph_dataset__prediction__deepect.py  graph_dataset__prediction__packing.py  linear_concept_approximation.py  linear_concept_approximation__aqsoldb.py  template_experiment.py  template_experiment_sub.py  test.py  vector_dataset.py  vector_dataset__autoencoder.py  vector_dataset__autoencoder__deepect.py  vector_dataset__prediction.py  vgd_concept_extraction.py  vgd_concept_extraction__aqsoldb.py  vgd_concept_extraction__ba2motifs.py  vgd_concept_extraction__compas.py  vgd_concept_extraction__fia_49k.py  vgd_concept_extraction__mutag.py  vgd_model_sweep.py  (+7 more)
supplementary/: README.rst
tests/: README.rst  create_mock_clusters.py  test_data.py  test_deep_ect.py  test_gpt.py  test_main.py  test_models.py  test_prototype_molecules.py  test_utils.py  test_visualization.py  util.py
(+65 files in other folders)
